cmake_minimum_required(VERSION 3.17)
project(Programacion_Memoria)

set(CMAKE_CXX_STANDARD 14)

include_directories("Examen 3")
include_directories("Examen 3/Examen Asincrono")
include_directories("Tarea 10")
include_directories("Tarea 15")
include_directories("Tarea 16")
include_directories("Tarea 17")
include_directories("Tarea 18")
include_directories("Tarea 19")
include_directories("Tarea 20")
include_directories("Tarea 21")
include_directories("Tarea 22")
include_directories("Tarea 23")
include_directories("Tarea 27")

add_executable(Programacion_Memoria
        "Examen 1/Asincrono.c"
        "Examen 1/Examen1-1.c"
        "Examen 1/Examen1-2.c"
        "Examen 1/Profe.c"
        "Examen 1/tempCodeRunnerFile.c"
        "Examen 1/Test.c"
        "Examen 2/Online.c/tempCodeRunnerFile.c"
        "Examen 2/Online.c/yeet.c"
        "Examen 2/Examen2-1.c"
        "Examen 2/Examen2-2.c"
        "Examen 2/ExamenParcial2Asincrono.c"
        "Examen 2/listenc.c"
        "Examen 2/mein (1).c"
        "Examen 2/mein.c"
        "Examen 2/tempCodeRunnerFile.c"
        "Examen 3/Examen Asincrono/contenedor.c"
        "Examen 3/Examen Asincrono/contenedor.h"
        "Examen 3/Examen Asincrono/mein.c"
        "Examen 3/Randum.c"
        "Examen 3/stack.c"
        "Examen 3/stack.h"
        "Examen 3/tempCodeRunnerFile.c"
        Santiago/Ejemplo.c
        Seguridad/GCD.c
        Seguridad/Random.c
        Seguridad/test.c
        Seguridad/XGCD.c
        "Tarea 10/rectangle.h"
        "Tarea 10/Tarea10.c"
        "Tarea 11/Tarea-11.c"
        "Tarea 12/captura.c"
        "Tarea 12/impreshionante.c"
        "Tarea 12/multiplica.c"
        "Tarea 13/Tarea13-1.c"
        "Tarea 14/profe.c"
        "Tarea 14/Tarea14-1.c"
        "Tarea 14/Tarea14-2.c"
        "Tarea 15/S9_1_ejemplostac.c"
        "Tarea 15/S9_1_stack.c"
        "Tarea 15/stack.c"
        "Tarea 15/stack.h"
        "Tarea 15/Tarea15-2.c"
        "Tarea 15/tempCodeRunnerFile.c"
        "Tarea 16/ejemplo.c"
        "Tarea 16/queues.c"
        "Tarea 16/queues.h"
        "Tarea 17/lista.c"
        "Tarea 17/lista.h"
        "Tarea 17/pruebalista.c"
        "Tarea 18/lsta.h"
        "Tarea 18/profe.c"
        "Tarea 18/TRE.c"
        "Tarea 19/TDAEspecial.c"
        "Tarea 19/tdaespecialejemplo.c"
        "Tarea 19/tdaspecial.h"
        "Tarea 20/pruebas.c"
        "Tarea 20/set.c"
        "Tarea 20/set.h"
        "Tarea 21/project.c"
        "Tarea 21/set.c"
        "Tarea 21/set.h"
        "Tarea 22/Ejemplo.c"
        "Tarea 22/heap.c"
        "Tarea 22/heap.h"
        "Tarea 23/ejemplo.c"
        "Tarea 23/pq.c"
        "Tarea 23/pq.h"
        "Tarea 24/Tarea24.c"
        "Tarea 24/Tarea24_2.c"
        "Tarea 26/Dos.c"
        "Tarea 26/Uno.c"
        "Tarea 27/arbol.c"
        "Tarea 27/arbol.h"
        "Tarea 27/Cuatro.c"
        "Tarea 27/Cuatro_M.c"
        "Tarea 27/Tres.c"
        "Tarea 27/Uno.c"
        "Tarea 5/EjemploProfe.c"
        "Tarea 5/Tarea5-1.c"
        "Tarea 5/Tarea5-2.c"
        "Tarea 5/Tarea5-3.c"
        "Tarea 5/Tarea5-4.c"
        "Tarea 5/tempCodeRunnerFile.c"
        "Tarea 7/Profe.c"
        "Tarea 7/Tarea7-1.c"
        "Tarea 7/Tarea7-2.c"
        "Tarea 7/Tarea7-3.c"
        "Tarea 7/tempCodeRunnerFile.c"
        "Tarea 8/Tarea8-1.c"
        "Tarea 8/Tarea8-2.c"
        "Tarea 9/Tarea9-a.c/Tarea9-1.c"
        "Tarea 9/Tarea9-a.c/Tarea9-2.c"
        Test/Haber.c
        Test/Yeet.cpp
        "Programacion Memoria.cpp"
        Tarea2-1.c
        Tarea2-2.c
        Tarea3-1.c
        Tarea3-2.c
        Tarea3-3.c
        Tarea4-1.c
        Tarea4-2.c
        Tarea4-3.c
        Tarea4-4.c
        Tarea_1.c
        tempCodeRunnerFile.c
        Test.c
        Variables.c)
